classDiagram
    class Priority {
        <<enumeration>>
        LOW = 1
        MEDIUM = 2
        HIGH = 3
    }

    class Frequency {
        <<enumeration>>
        DAILY
        WEEKLY
        AS_NEEDED
    }

    class Task {
        +str title
        +int duration_minutes
        +Priority priority
        +Frequency frequency
        +bool completed
        +str time_of_day
        +date due_date
        +mark_complete() None
        +reset() None
        +next_occurrence() Task
    }

    class Pet {
        +str name
        +str species
        +list~Task~ tasks
        +add_task(task) None
        +remove_task(title) bool
        +get_pending_tasks() list~Task~
        +get_completed_tasks() list~Task~
        +reset_daily_tasks() None
        +total_task_minutes() int
    }

    class Owner {
        +str name
        +int available_minutes
        +list~Pet~ pets
        +add_pet(pet) None
        +remove_pet(name) bool
        +get_pet(name) Pet
        +all_tasks() list
        +all_pending_tasks() list
        +total_pending_minutes() int
    }

    class Scheduler {
        +Owner owner
        +build_plan() DailyPlan
        +build_plan_for_pet(pet_name) DailyPlan
        +pending_tasks_by_priority() list
        +high_priority_tasks() list
        +sort_by_time() list
        +tasks_sorted_by_duration(ascending) list
        +filter_by_pet(pet_name) list
        +filter_by_status(completed) list
        +due_today() list
        +detect_conflicts() list~str~
        +mark_task_complete(pet_name, title) Task
        +summary() str
    }

    class DailyPlan {
        +list scheduled
        +list skipped
        +display() str
        +total_minutes() int
    }

    Task --> Priority : uses
    Task --> Frequency : uses
    Pet "1" *-- "0..*" Task : owns
    Owner "1" *-- "1..*" Pet : owns
    Scheduler "1" --> "1" Owner : reads
    Scheduler ..> DailyPlan : creates
    DailyPlan --> Pet : references
    DailyPlan --> Task : references
